mint JWT token and add securitydefinitions to bearer token
