# routes/ledgers.js
@@ -4,8 +4,8 @@ const ledgersController = require('../controllers/ledgers');
 
 router.get('/', ledgersController.getAll);
 router.get('/:id', ledgersController.getSingle);
-router.post('/', ledgersController.createLedger);
-router.put('/:id', ledgersController.updateLedger);
-router.delete('/:id', ledgersController.deleteLedger);
+router.post('/', /* #swagger.security = [{"BearerAuth": []}] */ ledgersController.createLedger);
+router.put('/:id', /* #swagger.security = [{"BearerAuth": []}] */ ledgersController.updateLedger);
+router.delete('/:id', /* #swagger.security = [{"BearerAuth": []}] */ ledgersController.deleteLedger);
 
 module.exports = router;
